Fix bug with not visible dropdown

--- a/assets/style.css
+++ b/assets/style.css
@@ -95,3 +95,7 @@
     justify-content: space-between;
     min-height: 100%;
 }
+
+.Select-menu-outer {
+    display : block !important;
+    }
